--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"@svelte-plugins/datepicker": "^1.0.11",
+		"date-fns": "^4.1.0"
 	}
 }
