--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
 		"@sveltejs/adapter-vercel": "^5.10.2",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@types/node": "^24.9.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"@svelte-plugins/datepicker": "^1.0.11",
-		"date-fns": "^4.1.0"
+		"air-datepicker": "^3.6.0",
+		"date-fns": "^4.1.0",
+		"litepicker": "^2.0.12"
 	}
 }
